<resources>
    <string name="app_name">shemajamebeli7</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="empty_password">Password Field Empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_password_pls">Please Repeate Password</string>
</resources>